[package]
name = "vleue_sentry"
version = "0.1.0"
edition = "2021"
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Sentry reporting plugin for Bevy"
repository = "https://github.com/vleue/vleue_sentry"
homepage = "https://github.com/vleue/vleue_sentry"
documentation = "https://docs.rs/vleue_sentry"
keywords = ["bevy", "error", "reporting", "observability", "sentry", "tracing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]

[features]
default = ["bevy"]
subcrates = ["bevy_app", "bevy_log", "bevy_utils"]

[dependencies]
sentry = "0.33.0"
sentry-tracing = "0.32.3"
bevy = { version = "0.14.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, optional = true }
bevy_app = { version = "0.14.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, optional = true }
bevy_log = { version = "0.14.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, optional = true }
bevy_utils = { version = "0.14.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, optional = true }
