[package]
name = "vleue_sentry"
version = "0.2.0"
edition = "2024"
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Sentry reporting plugin for Bevy"
repository = "https://github.com/vleue/vleue_sentry"
homepage = "https://github.com/vleue/vleue_sentry"
documentation = "https://docs.rs/vleue_sentry"
keywords = ["bevy", "error", "reporting", "observability", "sentry"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]

[features]
default = ["bevy"]
subcrates = ["bevy_app", "bevy_log", "bevy_utils"]

[dependencies]
sentry = "0.40"
sentry-tracing = "0.37"
tracing = "0.1"
bevy = { version = "0.16.0", default-features = false, optional = true, features = [
    "bevy_log",
] }
bevy_app = { version = "0.16.0", default-features = false, optional = true }
bevy_log = { version = "0.16.0", default-features = false, optional = true }
bevy_utils = { version = "0.16.0", default-features = false, optional = true }
